[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "keiba"
version = "0.1.0"
description = "競馬データ収集システム - netkeibaからレースデータを収集しSQLiteに保存するCLIツール"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "lxml>=4.9",
    "click>=8.0",
    "lightgbm>=4.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
keiba = "keiba.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=keiba --cov-report=term-missing"

[tool.coverage.run]
source = ["keiba"]
omit = ["tests/*"]
